--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -19,3 +19,10 @@ body {
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
 }
+
+.center {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
